--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Lato', helvetica, sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   height: 100%;
   width: 100%;
   background-color: #e7e2d0;
